--- a/src/assets/scss/_transitions.scss
+++ b/src/assets/scss/_transitions.scss
@@ -1,4 +1,4 @@
-/*SLIDE RIGHT*/
+// SLIDE RIGHT
 .slide-right-enter-active {
     transition: all 0.3s ease;
 }
@@ -10,5 +10,14 @@
 .slide-right-enter, .slide-right-leave-to
     /* .slide-fade-leave-active below version 2.1.8 */ {
     transform: translateX(10px);
+    opacity: 0;
+}
+
+// FADE
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity 0.5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
     opacity: 0;
 }
